@@ -327,9 +327,14 @@ void nick_identify (Nick *nptr, User *uptr __unused, char *all)
     SendRaw("SVSMODE %s +r",nptr->nick);
     if (user->vhost[0] != '\0') {
         SendRaw("CHGHOST %s %s",nptr->nick,user->vhost);
+        strncpy(nptr->hiddenhost, user->vhost, HOSTLEN);
         NoticeToUser(nptr,"Your vhost \2%s\2 has been activated",user->vhost);
     } else if (HasOption(user, UOPT_CLOAKED)) {
         SendRaw("CHGHOST %s %s%s", nptr->nick, user->nick, me.usercloak);
+        char host[HOSTLEN + 1];
+        bzero(host, HOSTLEN+1);
+        snprintf(host, HOSTLEN, "%s%s", user->nick, me.usercloak);
+        strncpy(nptr->hiddenhost, host, HOSTLEN);
         NoticeToUser(nptr,"Your cloak has been activated");
     }
     if (HasOption(user, UOPT_PROTECT)) DeleteGuest(nptr->nick);
@@ -639,11 +644,15 @@ void nick_set_hidemail (Nick *nptr, User *uptr, char *all)
 void nick_set_cloak (Nick *nptr, User *uptr, char *all)
 {
     char *arg1 = all;
+    char host[HOSTLEN + 1];
     SeperateWord(all);
 
     if (!Strcmp(arg1,"on")) {
         SetOption(uptr, UOPT_CLOAKED);
         SendRaw("CHGHOST %s %s%s", uptr->nick, uptr->nick, me.usercloak);
+        bzero(host, HOSTLEN+1);
+        snprintf(host, HOSTLEN, "%s%s", uptr->nick, me.usercloak);
+        strncpy(nptr->hiddenhost, host, HOSTLEN);
         NoticeToUser(nptr,"Your host is now cloaked");
     } else if (!Strcmp(arg1, "off")) {
         ClearOption(uptr, UOPT_CLOAKED);
